Rework Targo Bank PDF-Importer
Complete rework of Targo Bank PDF-Importer
https://forum.portfolio-performance.info/t/pdf-import-von-targobank/5537/38
https://forum.portfolio-performance.info/t/pdf-import-von-targobank/5537/39
https://forum.portfolio-performance.info/t/pdf-import-von-targobank/5537/44